gen/reviLangParser.py
# Generated from C:/Users/Redmi/Documents/Programming/Python/ReviCompiler/grammar\reviLang.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class reviLangParser ( Parser ):

    grammarFileName = "reviLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'return'", "'<<'", "'>>'", "'print'", 
                     "'if'", "'int'", "'double'", "'while'", "<INVALID>", 
                     "<INVALID>", "'*'", "'%'", "'/'", "'+'", "'-'", "'('", 
                     "')'", "'^'", "'='", "'=='", "'!='", "'{'", "'}'", 
                     "';'", "'>'", "'<'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "WHILE", "STRING", "ID", "TIMES", "REM", 
                      "DIV", "PLUS", "MINUS", "LPAREN", "RPAREN", "POW", 
                      "EQ", "EQ_EQ", "NOT_EQ", "LBRACE", "RBRACE", "END_STATE", 
                      "GT", "LT", "INT", "DECIMAL", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_function = 1
    RULE_functionHead = 2
    RULE_arg = 3
    RULE_arguments = 4
    RULE_functionBody = 5
    RULE_statement = 6
    RULE_assignmentStatement = 7
    RULE_returnStatement = 8
    RULE_whileStatement = 9
    RULE_convert_type = 10
    RULE_moveValueVariable = 11
    RULE_printStatement = 12
    RULE_ifStatement = 13
    RULE_expression = 14
    RULE_equation = 15
    RULE_relop = 16
    RULE_param = 17
    RULE_params = 18
    RULE_functionCall = 19
    RULE_atom = 20
    RULE_type = 21

    ruleNames =  [ "program", "function", "functionHead", "arg", "arguments", 
                   "functionBody", "statement", "assignmentStatement", "returnStatement", 
                   "whileStatement", "convert_type", "moveValueVariable", 
                   "printStatement", "ifStatement", "expression", "equation", 
                   "relop", "param", "params", "functionCall", "atom", "type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    WHILE=9
    STRING=10
    ID=11
    TIMES=12
    REM=13
    DIV=14
    PLUS=15
    MINUS=16
    LPAREN=17
    RPAREN=18
    POW=19
    EQ=20
    EQ_EQ=21
    NOT_EQ=22
    LBRACE=23
    RBRACE=24
    END_STATE=25
    GT=26
    LT=27
    INT=28
    DECIMAL=29
    WS=30
    COMMENT=31
    LINE_COMMENT=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(reviLangParser.FunctionContext)
            else:
                return self.getTypedRuleContext(reviLangParser.FunctionContext,i)


        def getRuleIndex(self):
            return reviLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = reviLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7 or _la==8:
                self.state = 44
                self.function()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionHead(self):
            return self.getTypedRuleContext(reviLangParser.FunctionHeadContext,0)


        def LBRACE(self):
            return self.getToken(reviLangParser.LBRACE, 0)

        def functionBody(self):
            return self.getTypedRuleContext(reviLangParser.FunctionBodyContext,0)


        def RBRACE(self):
            return self.getToken(reviLangParser.RBRACE, 0)

        def getRuleIndex(self):
            return reviLangParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = reviLangParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.functionHead()
            self.state = 51
            self.match(reviLangParser.LBRACE)
            self.state = 52
            self.functionBody()
            self.state = 53
            self.match(reviLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionHeadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(reviLangParser.TypeContext,0)


        def ID(self):
            return self.getToken(reviLangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(reviLangParser.LPAREN, 0)

        def arguments(self):
            return self.getTypedRuleContext(reviLangParser.ArgumentsContext,0)


        def RPAREN(self):
            return self.getToken(reviLangParser.RPAREN, 0)

        def getRuleIndex(self):
            return reviLangParser.RULE_functionHead

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionHead" ):
                listener.enterFunctionHead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionHead" ):
                listener.exitFunctionHead(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionHead" ):
                return visitor.visitFunctionHead(self)
            else:
                return visitor.visitChildren(self)




    def functionHead(self):

        localctx = reviLangParser.FunctionHeadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionHead)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.type_()
            self.state = 56
            self.match(reviLangParser.ID)
            self.state = 57
            self.match(reviLangParser.LPAREN)
            self.state = 58
            self.arguments()
            self.state = 59
            self.match(reviLangParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(reviLangParser.TypeContext,0)


        def ID(self):
            return self.getToken(reviLangParser.ID, 0)

        def getRuleIndex(self):
            return reviLangParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = reviLangParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.type_()
            self.state = 62
            self.match(reviLangParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(reviLangParser.ArgContext)
            else:
                return self.getTypedRuleContext(reviLangParser.ArgContext,i)


        def getRuleIndex(self):
            return reviLangParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArguments" ):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)




    def arguments(self):

        localctx = reviLangParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7 or _la==8:
                self.state = 64
                self.arg()


            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 67
                self.match(reviLangParser.T__0)
                self.state = 68
                self.arg()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(reviLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(reviLangParser.StatementContext,i)


        def getRuleIndex(self):
            return reviLangParser.RULE_functionBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionBody" ):
                listener.enterFunctionBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionBody" ):
                listener.exitFunctionBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionBody" ):
                return visitor.visitFunctionBody(self)
            else:
                return visitor.visitChildren(self)




    def functionBody(self):

        localctx = reviLangParser.FunctionBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 3044) != 0:
                self.state = 74
                self.statement()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStatement(self):
            return self.getTypedRuleContext(reviLangParser.AssignmentStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(reviLangParser.ReturnStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(reviLangParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(reviLangParser.WhileStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(reviLangParser.PrintStatementContext,0)


        def moveValueVariable(self):
            return self.getTypedRuleContext(reviLangParser.MoveValueVariableContext,0)


        def getRuleIndex(self):
            return reviLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = reviLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.assignmentStatement()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.returnStatement()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.ifStatement()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.whileStatement()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.printStatement()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 6)
                self.state = 85
                self.moveValueVariable()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(reviLangParser.TypeContext,0)


        def ID(self):
            return self.getToken(reviLangParser.ID, 0)

        def EQ(self):
            return self.getToken(reviLangParser.EQ, 0)

        def expression(self):
            return self.getTypedRuleContext(reviLangParser.ExpressionContext,0)


        def END_STATE(self):
            return self.getToken(reviLangParser.END_STATE, 0)

        def getRuleIndex(self):
            return reviLangParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStatement(self):

        localctx = reviLangParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.type_()
            self.state = 89
            self.match(reviLangParser.ID)
            self.state = 90
            self.match(reviLangParser.EQ)
            self.state = 91
            self.expression(0)
            self.state = 92
            self.match(reviLangParser.END_STATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(reviLangParser.ExpressionContext,0)


        def END_STATE(self):
            return self.getToken(reviLangParser.END_STATE, 0)

        def getRuleIndex(self):
            return reviLangParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = reviLangParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(reviLangParser.T__1)
            self.state = 95
            self.expression(0)
            self.state = 96
            self.match(reviLangParser.END_STATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(reviLangParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(reviLangParser.LPAREN, 0)

        def equation(self):
            return self.getTypedRuleContext(reviLangParser.EquationContext,0)


        def RPAREN(self):
            return self.getToken(reviLangParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(reviLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(reviLangParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(reviLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(reviLangParser.StatementContext,i)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(reviLangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(reviLangParser.ExpressionContext,i)


        def getRuleIndex(self):
            return reviLangParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = reviLangParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whileStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(reviLangParser.WHILE)
            self.state = 99
            self.match(reviLangParser.LPAREN)
            self.state = 100
            self.equation()
            self.state = 101
            self.match(reviLangParser.RPAREN)
            self.state = 102
            self.match(reviLangParser.LBRACE)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 805539820) != 0:
                self.state = 105
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 103
                    self.statement()
                    pass

                elif la_ == 2:
                    self.state = 104
                    self.expression(0)
                    pass


                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(reviLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Convert_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(reviLangParser.TypeContext,0)


        def LPAREN(self):
            return self.getToken(reviLangParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(reviLangParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(reviLangParser.RPAREN, 0)

        def getRuleIndex(self):
            return reviLangParser.RULE_convert_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConvert_type" ):
                listener.enterConvert_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConvert_type" ):
                listener.exitConvert_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConvert_type" ):
                return visitor.visitConvert_type(self)
            else:
                return visitor.visitChildren(self)




    def convert_type(self):

        localctx = reviLangParser.Convert_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_convert_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(reviLangParser.T__2)
            self.state = 113
            self.type_()
            self.state = 114
            self.match(reviLangParser.T__3)
            self.state = 115
            self.match(reviLangParser.LPAREN)
            self.state = 116
            self.expression(0)
            self.state = 117
            self.match(reviLangParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoveValueVariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(reviLangParser.ID, 0)

        def EQ(self):
            return self.getToken(reviLangParser.EQ, 0)

        def expression(self):
            return self.getTypedRuleContext(reviLangParser.ExpressionContext,0)


        def END_STATE(self):
            return self.getToken(reviLangParser.END_STATE, 0)

        def getRuleIndex(self):
            return reviLangParser.RULE_moveValueVariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMoveValueVariable" ):
                listener.enterMoveValueVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMoveValueVariable" ):
                listener.exitMoveValueVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMoveValueVariable" ):
                return visitor.visitMoveValueVariable(self)
            else:
                return visitor.visitChildren(self)




    def moveValueVariable(self):

        localctx = reviLangParser.MoveValueVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_moveValueVariable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(reviLangParser.ID)
            self.state = 120
            self.match(reviLangParser.EQ)
            self.state = 121
            self.expression(0)
            self.state = 122
            self.match(reviLangParser.END_STATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(reviLangParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(reviLangParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(reviLangParser.RPAREN, 0)

        def END_STATE(self):
            return self.getToken(reviLangParser.END_STATE, 0)

        def getRuleIndex(self):
            return reviLangParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStatement" ):
                return visitor.visitPrintStatement(self)
            else:
                return visitor.visitChildren(self)




    def printStatement(self):

        localctx = reviLangParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(reviLangParser.T__4)
            self.state = 125
            self.match(reviLangParser.LPAREN)
            self.state = 126
            self.expression(0)
            self.state = 127
            self.match(reviLangParser.RPAREN)
            self.state = 128
            self.match(reviLangParser.END_STATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(reviLangParser.LPAREN, 0)

        def equation(self):
            return self.getTypedRuleContext(reviLangParser.EquationContext,0)


        def RPAREN(self):
            return self.getToken(reviLangParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(reviLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(reviLangParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(reviLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(reviLangParser.StatementContext,i)


        def getRuleIndex(self):
            return reviLangParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = reviLangParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(reviLangParser.T__5)
            self.state = 131
            self.match(reviLangParser.LPAREN)
            self.state = 132
            self.equation()
            self.state = 133
            self.match(reviLangParser.RPAREN)
            self.state = 134
            self.match(reviLangParser.LBRACE)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 3044) != 0:
                self.state = 135
                self.statement()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 141
            self.match(reviLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return reviLangParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExpressionAddContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a reviLangParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(reviLangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(reviLangParser.ExpressionContext,i)

        def PLUS(self):
            return self.getToken(reviLangParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(reviLangParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionAdd" ):
                listener.enterExpressionAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionAdd" ):
                listener.exitExpressionAdd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionAdd" ):
                return visitor.visitExpressionAdd(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionMulContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a reviLangParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)
